@@ -2,6 +2,7 @@ Atomia Public Order Page v13.4
 
 2013-05-29 Stefan Stankovic <stefan.stankovic@atomia.com>
 	- [IMPROVEMENT] Norid self signed certificate email added in custom data of order line
+	- [IMPROVEMENT] Default POP page added NO and NL country check 
 	
 2013-05-28 Stefan Stankovic <stefan.stankovic@atomia.com>
 	- [BUGFIX] Removed swedish organization number formating
